--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@changesets/cli": "^2.27.7",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
