--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.27.7",
+    "@clerk/nextjs": "^5.3.0",
+    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
