--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.3.0",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "axios": "^1.7.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
